--- a/index.html
+++ b/index.html
@@ -4,8 +4,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>TFA | Landing page</title>
     <link rel="stylesheet" href="assets/style/main.css">
-    <title>Document</title>
+    <script src="assets/js/main.js" defer></script>
+
+    <meta name="description" content="Projet TFA de l'option DWT par Mateo Cueva">
+
+    <!-- Twitter Card data -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:creator" content="@mateocueva">
+    <meta name="twitter:title" content="Mateo Cueva | TFA - DWT">
+    <meta name="twitter:description" content="Projet TFA de l'option DWT par Mateo Cueva">
+    <!-- Twitter summary card with large image must be at least 280x150px -->
+    <meta name="twitter:image" content="https://mateocueva.be/projets/tfa/assets/images/Animergency-picto.svg">
+    
+    <!-- Open Graph data -->
+    <meta property="og:site_name" content="Mateo Cueva - TFA" />
+    <meta property="og:title" content="Mateo Cueva | TFA - DWT" />
+    <meta property="og:description" content="Projet TFA de l'option DWT par Mateo Cueva" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://mateocueva.be/projets/tfa/index.html" />
+    <meta property="og:image" content="https://mateocueva.be/projets/tfa/assets/images/Animergency-picto.svg"/>
+    <meta property="og:image:width" content="1800">
+    <meta property="og:image:height" content="945">
+
+    <link rel="apple-touch-icon" sizes="57x57" href="assets/images/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="assets/images/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="assets/images/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="assets/images/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="assets/images/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="assets/images/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="assets/images/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="assets/images/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="assets/images/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/images/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="projets/iolce/assets/images/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+
+<head>
 </head>
 <body>
     
