--- a/index.html
+++ b/index.html
@@ -47,9 +47,27 @@
     <meta name="msapplication-TileImage" content="projets/iolce/assets/images/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
-<head>
 </head>
+
 <body>
+
+    <header class="header">
+        <div class="header__menu">
+            <a href="index.html"><img class="header__menu--logo" src="assets/images/Animergency-picto.svg" alt="Patte d'animal faisant partie du logo Animergency"></a>
+            <button id="btn-burger" class="header__menu--burger">
+                <span class="header__bouton--txt"></span>
+            </button>
+        </div>
+        <nav class="nav__header header--display header--no-display" id="menu-burger">
+            <ul class="header__el">
+                <li class="header__el nav__el--active"><a class="header__link" href="index.html">Accueil</a></li>
+                <li class="header__el nav__el--inactive"><a class="header__link" href="rencontres.html">Rencontres</a></li>
+                <li class="header__el nav__el--inactive"><a class="header__link" href="solutions.html">Solutions</a></li>
+                <li class="header__el nav__el--inactive"><a class="header__link" href="modules.html">Modules</a></li>
+                <li class="header__el nav__el--inactive"><a class="header__link" href="modules.html">Présentation</a></li>
+            </ul>
+        </nav>
+    </header>
     
 </body>
 </html>
