ajout de css pour le menu

--- a/index.html
+++ b/index.html
@@ -68,6 +68,16 @@
             </ul>
         </nav>
     </header>
-    
+
+    <main>
+
+        <div>
+            <h1></h1>
+        </div>
+
+        <section></section>
+
+    </main>
+
 </body>
 </html>
