--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
         <nav class="nav__header header--display header--no-display" id="menu-burger">
             <ul class="header__el">
-                <li class="header__el nav__el--active"><a class="header__link--active" href="index.html">Accueil</a></li>
+                <li class="header__el nav__el--active"><a class="header__link" href="index.html">Accueil</a></li>
                 <li class="header__el nav__el--inactive"><a class="header__link" href="rencontres.html">Rencontres</a></li>
                 <li class="header__el nav__el--inactive"><a class="header__link" href="solutions.html">Solutions</a></li>
                 <li class="header__el nav__el--inactive"><a class="header__link" href="modules.html">Modules</a></li>
