--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     <main>
 
         <div>
+            <img class="image__content mgrid-start01 mgrid-end gridstart01 grid-end07" src="assets/images/fond-image.svg" srcset="assets/images/alexandra-bt@2x.jpg 2x" alt="Alexandra Deschamps-Sonsino présentant “All Together Now” à Beyond Tellerrand 2022" loading="lazy" decoding="async">
             <h1></h1>
         </div>
 
