--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
 
         <div>
             <img class="image__content mgrid-start01 mgrid-end gridstart01 grid-end07" src="assets/images/fond-image.svg" srcset="assets/images/alexandra-bt@2x.jpg 2x" alt="" loading="lazy" decoding="async">
+            <img class="image__content mgrid-start01 mgrid-end gridstart01 grid-end07" src="assets/images/preview2.png" srcset="assets/images/alexandra-bt@2x.jpg 2x" alt="" loading="lazy" decoding="async">
+            
             <h1></h1>
         </div>
 
