--- a/index.html
+++ b/index.html
@@ -71,11 +71,9 @@
 
     <main>
 
-        <div>
+        <div class="image-container">
             <img class="image__content mgrid-start01 mgrid-end gridstart01 grid-end07" src="assets/images/fond-image.svg" srcset="assets/images/alexandra-bt@2x.jpg 2x" alt="" loading="lazy" decoding="async">
             <img class="image__content mgrid-start01 mgrid-end gridstart01 grid-end07" src="assets/images/preview2.png" srcset="assets/images/alexandra-bt@2x.jpg 2x" alt="" loading="lazy" decoding="async">
-            
-            <h1></h1>
         </div>
 
         <section></section>
