--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
         <div class="image-container">
             <img class="image__content mgrid-start01 mgrid-end gridstart01 grid-end07" src="assets/images/fond-image.svg" srcset="assets/images/alexandra-bt@2x.jpg 2x" alt="" loading="lazy" decoding="async">
-            <img class="image__content1 mgrid-start01 mgrid-end gridstart01 grid-end07" src="assets/images/preview2.png" srcset="assets/images/alexandra-bt@2x.jpg 2x" alt="" loading="lazy" decoding="async">
+            <img class="image__content1 mgrid-start03 mgrid-end05 gridstart01 grid-end07" src="assets/images/preview2.png" srcset="assets/images/alexandra-bt@2x.jpg 2x" alt="" loading="lazy" decoding="async">
         </div>
 
         <section></section>
