--- a/index.html
+++ b/index.html
@@ -70,11 +70,13 @@
     </header>
 
     <main>
-
         <div class="content">
             <div class="image-container">
                 <img class="image__content mgrid-start01 mgrid-end gridstart01 grid-end07" src="assets/images/fond-image.svg" srcset="assets/images/alexandra-bt@2x.jpg 2x" alt="" loading="lazy" decoding="async">
             </div>
+        </div>
+
+        <div class="content">
             <h1 class="title title--big mgrid-start01 mgrid-end grid-start01 grid-end">Le meilleur moyen de les aider, c'est de savoir comment!</h1>
             <p class="txt__content mgrid-start01 mgrid-end grid-start03 grid-end09">AnimErgency est un guide complet et gratuit pour prendre soin de nos animaux bien-aimés. Qu’il s’agisse d’un animal domestique ou sauvage, savoir agir fait toute la différence : apprenez donc comment apporter une aide précieuse à ces animaux en détresse.</p>
             <a class="btn-experience bouton--style  mgrid-start02 mgrid-end05" href="https://xd.adobe.com/view/9a886bf7-ffc2-4fcb-9da5-5ba5720505b7-cfdb/?fullscreen&hints=off">Commencer l'expérience</a>
