--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <main>
         <div class="content">
             <div class="image-container">
-                <img class="image__content mgrid-start01 mgrid-end gridstart01 grid-end07" src="assets/images/fond-image.svg" srcset="assets/images/alexandra-bt@2x.jpg 2x" alt="" loading="lazy" decoding="async">
+                <img class="image__content mgrid-start01 mgrid-end gridstart01 grid-end07" src="assets/images/image-intro.png" srcset="assets/images/alexandra-bt@2x.jpg 2x" alt="" loading="lazy" decoding="async">
             </div>
         </div>
 
