ajout du contenu dans index.html

--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
 
             <p class="txt__content mgrid-start01 mgrid-end grid-start03 grid-end09">Pour commencer mon travail, je souhaitais me tourner vers une association qui aurait comme objectif principal de soigner des animaux. C’est là que j’ai découvert le CREAVES de Namur, une ASBL spécialisée dans la revalidation des espèces animales vivant à l’état sauvage.</p>
 
-            <img src="" alt="">
+            <img class="image__content mgrid-start01 mgrid-end gridstart01 grid-end07" src="assets/images/logo-creaves-Namur.png" srcset="assets/images/alexandra-bt@2x.jpg 2x" alt="" loading="lazy" decoding="async">
             <p class="txt__content mgrid-start01 mgrid-end grid-start03 grid-end09">Le CREAVES de Namur est une ASBL qui prend en charge temporairement et gratuitement les animaux qui se retrouvent blessés ou malades. Le seul but étant de prodiguer les soins nécessaires avant la remise en liberté sur le lieu de la découverte lorsque c’est possible.</p>
 
-            <img src="" alt="">
+            <img class="image__content mgrid-start01 mgrid-end gridstart01 grid-end07" src="assets/images/formulaire.png" srcset="assets/images/alexandra-bt@2x.jpg 2x" alt="" loading="lazy" decoding="async">
             <p class="txt__content mgrid-start01 mgrid-end grid-start03 grid-end09">Le CREAVES de Namur est une ASBL qui prend en charge temporairement et gratuitement les animaux qui se retrouvent blessés ou malades. Le seul but étant de prodiguer les soins nécessaires avant la remise en liberté sur le lieu de la découverte lorsque c’est possible.</p>
 
             <a href="#">Lien vers reste d'infos</a>
@@ -103,7 +103,7 @@
 
             <p class="txt__content mgrid-start01 mgrid-end grid-start03 grid-end09">Après beaucoup de réflexion, j’ai fini par trouver 3 potentielles solutions</p>
 
-            <img src="" alt="">
+            <img class="image__content mgrid-start01 mgrid-end gridstart01 grid-end07" src="assets/images/maya.png" srcset="assets/images/alexandra-bt@2x.jpg 2x" alt="" loading="lazy" decoding="async">
 
             <ul>
                 <li>Réaliser un guide imprimé</li>
@@ -124,9 +124,9 @@
 
             <p class="txt__content mgrid-start01 mgrid-end grid-start03 grid-end09">Dans le but de mener à bien mon projet, il y aura une fonctionnalité principale et plusieurs fonctionnalités secondaires. </p>
 
-            <img src="" alt="">
+            <img class="image__content mgrid-start01 mgrid-end gridstart01 grid-end07" src="assets/images/maya.png" srcset="assets/images/alexandra-bt@2x.jpg 2x" alt="" loading="lazy" decoding="async">
 
-            <img src="" alt="">
+            <img class="image__content mgrid-start01 mgrid-end gridstart01 grid-end07" src="assets/images/maya.png" srcset="assets/images/alexandra-bt@2x.jpg 2x" alt="" loading="lazy" decoding="async">
             <h3></h3>
 
             <a href="#">Lien vers reste d'infos</a>
@@ -147,11 +147,13 @@
         <section class="content conclusion">
             <h2>Conclusion</h2>
 
-            <img src="" alt="">
+            <img class="image__content mgrid-start01 mgrid-end gridstart01 grid-end07" src="assets/images/maya.png" srcset="assets/images/alexandra-bt@2x.jpg 2x" alt="" loading="lazy" decoding="async">
 
             <p class="txt__content mgrid-start01 mgrid-end grid-start03 grid-end09">Avec la création de cette formation/ guide, j’espère pouvoir venir en aide à toutes ces personnes qui se trouvent dans une situation d’urgence avec un animal et qui ne savent pas comment réagir, mais aussi, à tous les animaux qui pourraient avoir besoin d’aide. </p>
 
         </section>
+
+        <button id="scrollUpButton">Scroll Up</button>
 
     </main>
 
