--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </section>
 
         <section class="content rencontres">
-            <h2>Rencontres</h2>
+            <h2 class="title title--medium mgrid-start01 mgrid-end grid-start01 grid-end">Rencontres</h2>
 
             <p class="txt__content mgrid-start01 mgrid-end grid-start03 grid-end09">Pour commencer mon travail, je souhaitais me tourner vers une association qui aurait comme objectif principal de soigner des animaux. C’est là que j’ai découvert le CREAVES de Namur, une ASBL spécialisée dans la revalidation des espèces animales vivant à l’état sauvage.</p>
 
@@ -99,7 +99,7 @@
         </section>
 
         <section class="content solutions">
-            <h2>Solutions</h2>
+            <h2 class="title title--medium mgrid-start01 mgrid-end grid-start01 grid-end">Solutions</h2>
 
             <p class="txt__content mgrid-start01 mgrid-end grid-start03 grid-end09">Après beaucoup de réflexion, j’ai fini par trouver 3 potentielles solutions</p>
 
@@ -111,7 +111,7 @@
                 <li>Formation en ligne:</li>
             </ul>
 
-            <h3>Solution choisie</h3>
+            <h3 class="title title--small mgrid-start01 mgrid-end grid-start01 grid-end">Solution choisie</h3>
 
             <p class="txt__content mgrid-start01 mgrid-end grid-start03 grid-end09">Ayant chacune leurs points forts et points faibles, j’ai opté pour la solution qui pourrait être la plus complète et offrant la meilleure expérience utilisateur: la formation en ligne.</p>
             
@@ -120,21 +120,21 @@
         </section>
 
         <section class="content modules">
-            <h2>Fonctionalités</h2>
+            <h2 class="title title--medium mgrid-start01 mgrid-end grid-start01 grid-end">Fonctionalités</h2>
 
             <p class="txt__content mgrid-start01 mgrid-end grid-start03 grid-end09">Dans le but de mener à bien mon projet, il y aura une fonctionnalité principale et plusieurs fonctionnalités secondaires. </p>
 
             <img class="image__content mgrid-start01 mgrid-end gridstart01 grid-end07" src="assets/images/maya.png" srcset="assets/images/alexandra-bt@2x.jpg 2x" alt="" loading="lazy" decoding="async">
 
             <img class="image__content mgrid-start01 mgrid-end gridstart01 grid-end07" src="assets/images/maya.png" srcset="assets/images/alexandra-bt@2x.jpg 2x" alt="" loading="lazy" decoding="async">
-            <h3></h3>
+            <h3 class="title title--small mgrid-start01 mgrid-end grid-start01 grid-end">Fonctionnalité apprentissage</h3>
 
             <a href="#">Lien vers reste d'infos</a>
             
         </section>
 
         <section class="content presentation">
-            <h2>Présentation TFA</h2>
+            <h2 class="title title--medium mgrid-start01 mgrid-end grid-start01 grid-end">Présentation TFA</h2>
 
             <p class="txt__content mgrid-start01 mgrid-end grid-start03 grid-end09">Voici la vidéo du déroulement de mon projet</p>
 
@@ -145,7 +145,7 @@
         </section>
 
         <section class="content conclusion">
-            <h2>Conclusion</h2>
+            <h2 class="title title--medium mgrid-start01 mgrid-end grid-start01 grid-end">Conclusion</h2>
 
             <img class="image__content mgrid-start01 mgrid-end gridstart01 grid-end07" src="assets/images/maya.png" srcset="assets/images/alexandra-bt@2x.jpg 2x" alt="" loading="lazy" decoding="async">
 
