ajout du contenu dans index.html

--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
 
             <p class="txt__content mgrid-start01 mgrid-end grid-start03 grid-end09">Pour commencer mon travail, je souhaitais me tourner vers une association qui aurait comme objectif principal de soigner des animaux. C’est là que j’ai découvert le CREAVES de Namur, une ASBL spécialisée dans la revalidation des espèces animales vivant à l’état sauvage.</p>
 
-            <img class="image__content mgrid-start01 mgrid-end gridstart01 grid-end07" src="assets/images/logo-creaves-Namur.png" srcset="assets/images/alexandra-bt@2x.jpg 2x" alt="" loading="lazy" decoding="async">
+            <img class="image__content mgrid-start02 mgrid-end05 gridstart01 grid-end07" src="assets/images/logo-creaves-Namur.png" srcset="assets/images/alexandra-bt@2x.jpg 2x" alt="" loading="lazy" decoding="async">
             <p class="txt__content mgrid-start01 mgrid-end grid-start03 grid-end09">Le CREAVES de Namur est une ASBL qui prend en charge temporairement et gratuitement les animaux qui se retrouvent blessés ou malades. Le seul but étant de prodiguer les soins nécessaires avant la remise en liberté sur le lieu de la découverte lorsque c’est possible.</p>
 
-            <img class="image__content mgrid-start01 mgrid-end gridstart01 grid-end07" src="assets/images/formulaire.png" srcset="assets/images/alexandra-bt@2x.jpg 2x" alt="" loading="lazy" decoding="async">
+            <img class="image__content mgrid-start02 mgrid-end05 gridstart01 grid-end07" src="assets/images/formulaire.png" srcset="assets/images/alexandra-bt@2x.jpg 2x" alt="" loading="lazy" decoding="async">
             <p class="txt__content mgrid-start01 mgrid-end grid-start03 grid-end09">Le CREAVES de Namur est une ASBL qui prend en charge temporairement et gratuitement les animaux qui se retrouvent blessés ou malades. Le seul but étant de prodiguer les soins nécessaires avant la remise en liberté sur le lieu de la découverte lorsque c’est possible.</p>
 
-            <a href="#">Lien vers reste d'infos</a>
+            <a class="section-link mgrid-start01 mgrid-end grid-start03 grid-end09" href="#">Lien vers reste d'infos</a>
 
         </section>
 
