--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
         </section>
 
-        <button id="scrollUpButton"><img src="assets/images/Animergency-picto.svg" alt=""></button>
+        <button id="scrollUpButton"></button>
 
     </main>
 
