--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     <meta name="twitter:image" content="https://mateocueva.be/projets/tfa/assets/images/Animergency-picto.svg">
     
     <!-- Open Graph data -->
-    <meta property="og:site_name" content="Mateo Cueva - TFA" />
-    <meta property="og:title" content="Mateo Cueva | TFA - DWT" />
-    <meta property="og:description" content="Projet TFA de l'option DWT par Mateo Cueva" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://mateocueva.be/projets/tfa/index.html" />
-    <meta property="og:image" content="https://mateocueva.be/projets/tfa/assets/images/Animergency-picto.svg"/>
+    <meta property="og:site_name" content="Mateo Cueva - TFA">
+    <meta property="og:title" content="Mateo Cueva | TFA - DWT">
+    <meta property="og:description" content="Projet TFA de l'option DWT par Mateo Cueva">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://mateocueva.be/projets/tfa/index.html">
+    <meta property="og:image" content="https://mateocueva.be/projets/tfa/assets/images/Animergency-picto.svg">
     <meta property="og:image:width" content="1800">
     <meta property="og:image:height" content="945">
 
@@ -74,7 +74,6 @@
         <div class="content">
             <figure class="mgrid-start01 mgrid-end gridstart01 grid-end07">
                 <img class="image__content" src="assets/images/image-intro.png" srcset="assets/images/image-intro@2x.png 2x" alt="Prototype app" loading="lazy" decoding="async">
-                <figcaption class="legend">Prototype App</figcaption>
             </figure>
             <h1 class="title title--big mgrid-start01 mgrid-end grid-start01 grid-end">Le meilleur moyen de les aider, c'est de savoir comment!</h1>
             <p class="txt__content mgrid-start01 mgrid-end grid-start03 grid-end09">AnimErgency est un guide complet et gratuit pour prendre soin de nos animaux bien-aimés. Qu’il s’agisse d’un animal domestique ou sauvage, savoir agir fait toute la différence : apprenez donc comment apporter une aide précieuse à ces animaux en détresse.</p>
@@ -83,7 +82,9 @@
 
         <section class="content motivation">
             <h2 class="title title--medium mgrid-start01 mgrid-end grid-start01 grid-end">Motivation</h2>
-            <img class="image__content mgrid-start01 mgrid-end gridstart01 grid-end07" src="assets/images/maya.png" srcset="assets/images/alexandra-bt@2x.jpg 2x" alt="" loading="lazy" decoding="async">
+            <figure class="mgrid-start01 mgrid-end gridstart01 grid-end07">
+                <img class="image__content" src="assets/images/maya.png" srcset="assets/images/image-intro@2x.png 2x" alt="Prototype app" loading="lazy" decoding="async">
+            </figure>
             <p class="txt__content txt__content--color mgrid-start01 mgrid-end grid-start03 grid-end09">Etant passionné des animaux depuis mon plus jeune âge, j’ai décidé de consacrer mon TFA à leur bien-être. En effet, c’est lorsque je me rappelais de tous les animaux blessés que l’on trouve aux bords des routes, qu’une vague idée de projet m’est venue. Je ne savais pas encore comment m’y prendre, ni si mon idée était bonne ou pas. Tout ce que je voulais, c’était de venir en aide à ces animaux dans le besoin, d’une quelconque façon.</p>
         </section>
 
@@ -142,7 +143,7 @@
 
             <p class="txt__content mgrid-start01 mgrid-end grid-start03 grid-end09">Voici la vidéo du déroulement de mon projet</p>
 
-            <video src=""></video>
+            <video class="mgrid-start01 mgrid-end grid-start01 grid-end" src="#"></video>
 
             <a class="section-link mgrid-start01 mgrid-end grid-start03 grid-end09" href="#">Lien vers reste d'infos</a>
             
