ajout du contenu dans index.html

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
 
         <section class="content motivation">
-            <h2 class="title title--medium mgrid-start01 mgrid-end grid-start01 grid-end">Motivation</h2>
+            <h2 class="title title--medium title--color mgrid-start01 mgrid-end grid-start01 grid-end">Motivation</h2>
             <figure class="mgrid-start01 mgrid-end gridstart01 grid-end07">
                 <img class="image__content" src="assets/images/maya.png" srcset="assets/images/image-intro@2x.png 2x" alt="Prototype app" loading="lazy" decoding="async">
             </figure>
