ajout du contenu dans index.html

--- a/index.html
+++ b/index.html
@@ -93,10 +93,14 @@
 
             <p class="txt__content mgrid-start01 mgrid-end grid-start03 grid-end09">Pour commencer mon travail, je souhaitais me tourner vers une association qui aurait comme objectif principal de soigner des animaux. C’est là que j’ai découvert le CREAVES de Namur, une ASBL spécialisée dans la revalidation des espèces animales vivant à l’état sauvage.</p>
 
-            <img class="image__content mgrid-start02 mgrid-end05 gridstart01 grid-end07" src="assets/images/logo-creaves-Namur.png" srcset="assets/images/alexandra-bt@2x.jpg 2x" alt="" loading="lazy" decoding="async">
+            <figure class="mgrid-start01 mgrid-end gridstart01 grid-end07">
+                <img class="image__content" src="assets/images/maya.png" srcset="assets/images/image-intro@2x.png 2x" alt="Prototype app" loading="lazy" decoding="async">
+            </figure>
             <p class="txt__content mgrid-start01 mgrid-end grid-start03 grid-end09">Le CREAVES de Namur est une ASBL qui prend en charge temporairement et gratuitement les animaux qui se retrouvent blessés ou malades. Le seul but étant de prodiguer les soins nécessaires avant la remise en liberté sur le lieu de la découverte lorsque c’est possible.</p>
 
-            <img class="image__content mgrid-start02 mgrid-end05 gridstart01 grid-end07" src="assets/images/formulaire.png" srcset="assets/images/alexandra-bt@2x.jpg 2x" alt="" loading="lazy" decoding="async">
+            <figure class="mgrid-start01 mgrid-end gridstart01 grid-end07">
+                <img class="image__content" src="assets/images/maya.png" srcset="assets/images/image-intro@2x.png 2x" alt="Prototype app" loading="lazy" decoding="async">
+            </figure>
             <p class="txt__content mgrid-start01 mgrid-end grid-start03 grid-end09">Le CREAVES de Namur est une ASBL qui prend en charge temporairement et gratuitement les animaux qui se retrouvent blessés ou malades. Le seul but étant de prodiguer les soins nécessaires avant la remise en liberté sur le lieu de la découverte lorsque c’est possible.</p>
 
             <a class="section-link mgrid-start01 mgrid-end grid-start03 grid-end09" href="#">Lien vers reste d'infos</a>
@@ -108,7 +112,9 @@
 
             <p class="txt__content mgrid-start01 mgrid-end grid-start03 grid-end09">Après beaucoup de réflexion, j’ai fini par trouver 3 potentielles solutions</p>
 
-            <img class="image__content mgrid-start01 mgrid-end gridstart01 grid-end07" src="assets/images/maya.png" srcset="assets/images/alexandra-bt@2x.jpg 2x" alt="" loading="lazy" decoding="async">
+            <figure class="mgrid-start01 mgrid-end gridstart01 grid-end07">
+                <img class="image__content" src="assets/images/solution.png" srcset="assets/images/solution@2x.png 2x" alt="Illustration solution" loading="lazy" decoding="async">
+            </figure>
 
             <ul>
                 <li>Réaliser un guide imprimé</li>
@@ -129,9 +135,13 @@
 
             <p class="txt__content mgrid-start01 mgrid-end grid-start03 grid-end09">Dans le but de mener à bien mon projet, il y aura une fonctionnalité principale et plusieurs fonctionnalités secondaires. </p>
 
-            <img class="image__content mgrid-start01 mgrid-end gridstart01 grid-end07" src="assets/images/maya.png" srcset="assets/images/alexandra-bt@2x.jpg 2x" alt="" loading="lazy" decoding="async">
+            <figure class="mgrid-start01 mgrid-end gridstart01 grid-end07">
+                <img class="image__content" src="assets/images/maya.png" srcset="assets/images/image-intro@2x.png 2x" alt="Prototype app" loading="lazy" decoding="async">
+            </figure>
 
-            <img class="image__content mgrid-start01 mgrid-end gridstart01 grid-end07" src="assets/images/maya.png" srcset="assets/images/alexandra-bt@2x.jpg 2x" alt="" loading="lazy" decoding="async">
+            <figure class="mgrid-start01 mgrid-end gridstart01 grid-end07">
+                <img class="image__content" src="assets/images/maya.png" srcset="assets/images/image-intro@2x.png 2x" alt="Prototype app" loading="lazy" decoding="async">
+            </figure>
             <h3 class="title title--small mgrid-start01 mgrid-end grid-start01 grid-end">Fonctionnalité apprentissage</h3>
 
             <a class="section-link mgrid-start01 mgrid-end grid-start03 grid-end09" href="#">Lien vers reste d'infos</a>
@@ -150,7 +160,9 @@
         <section class="content conclusion">
             <h2 class="title title--medium mgrid-start01 mgrid-end grid-start01 grid-end">Conclusion</h2>
 
-            <img class="image__content mgrid-start01 mgrid-end gridstart01 grid-end07" src="assets/images/maya.png" srcset="assets/images/alexandra-bt@2x.jpg 2x" alt="" loading="lazy" decoding="async">
+            <figure class="mgrid-start01 mgrid-end gridstart01 grid-end07">
+                <img class="image__content" src="assets/images/maya.png" srcset="assets/images/image-intro@2x.png 2x" alt="Prototype app" loading="lazy" decoding="async">
+            </figure>
 
             <p class="txt__content mgrid-start01 mgrid-end grid-start03 grid-end09">Avec la création de cette formation/ guide, j’espère pouvoir venir en aide à toutes ces personnes qui se trouvent dans une situation d’urgence avec un animal et qui ne savent pas comment réagir, mais aussi, à tous les animaux qui pourraient avoir besoin d’aide. </p>
 
