ajout du contenu dans index.html

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <main>
 
         <div class="content">
-            <figure class="mgrid-start01 mgrid-end gridstart01 grid-end07">
+            <figure class="mgrid-start01 mgrid-end05 gridstart01 grid-end07">
                 <img class="image__content" src="assets/images/image-intro.png" srcset="assets/images/image-intro@2x.png 2x" alt="Prototype app" loading="lazy" decoding="async">
             </figure>
             <h1 class="title title--big mgrid-start01 mgrid-end grid-start01 grid-end">Le meilleur moyen de les aider, c'est de savoir comment!</h1>
@@ -82,8 +82,8 @@
 
         <section class="content motivation">
             <h2 class="title title--medium title--color mgrid-start01 mgrid-end grid-start01 grid-end">Motivation</h2>
-            <figure class="mgrid-start01 mgrid-end gridstart01 grid-end07">
-                <img class="image__content" src="assets/images/maya.png" srcset="assets/images/image-intro@2x.png 2x" alt="Prototype app" loading="lazy" decoding="async">
+            <figure class="mgrid-start01 mgrid-end05 gridstart01 grid-end07">
+                <img class="image__content" src="assets/images/maya.png" srcset="assets/images/maya@2x.png 2x" alt="Prototype app" loading="lazy" decoding="async">
             </figure>
             <p class="txt__content txt__content--color mgrid-start01 mgrid-end grid-start03 grid-end09">Etant passionné des animaux depuis mon plus jeune âge, j’ai décidé de consacrer mon TFA à leur bien-être. En effet, c’est lorsque je me rappelais de tous les animaux blessés que l’on trouve aux bords des routes, qu’une vague idée de projet m’est venue. Je ne savais pas encore comment m’y prendre, ni si mon idée était bonne ou pas. Tout ce que je voulais, c’était de venir en aide à ces animaux dans le besoin, d’une quelconque façon.</p>
         </section>
@@ -93,13 +93,13 @@
 
             <p class="txt__content mgrid-start01 mgrid-end grid-start03 grid-end09">Pour commencer mon travail, je souhaitais me tourner vers une association qui aurait comme objectif principal de soigner des animaux. C’est là que j’ai découvert le CREAVES de Namur, une ASBL spécialisée dans la revalidation des espèces animales vivant à l’état sauvage.</p>
 
-            <figure class="mgrid-start01 mgrid-end gridstart01 grid-end07">
-                <img class="image__content" src="assets/images/maya.png" srcset="assets/images/image-intro@2x.png 2x" alt="Prototype app" loading="lazy" decoding="async">
+            <figure class="mgrid-start02 mgrid-end05 gridstart01 grid-end07">
+                <img class="image__content" src="assets/images/logo-creaves-Namur.png" srcset="assets/images/logo-creaves-Namur@2x.png 2x" alt="Prototype app" loading="lazy" decoding="async">
             </figure>
             <p class="txt__content mgrid-start01 mgrid-end grid-start03 grid-end09">Le CREAVES de Namur est une ASBL qui prend en charge temporairement et gratuitement les animaux qui se retrouvent blessés ou malades. Le seul but étant de prodiguer les soins nécessaires avant la remise en liberté sur le lieu de la découverte lorsque c’est possible.</p>
 
-            <figure class="mgrid-start01 mgrid-end gridstart01 grid-end07">
-                <img class="image__content" src="assets/images/maya.png" srcset="assets/images/image-intro@2x.png 2x" alt="Prototype app" loading="lazy" decoding="async">
+            <figure class="mgrid-start02 mgrid-end05 gridstart01 grid-end07">
+                <img class="image__content" src="assets/images/formulaire.png" srcset="assets/images/formulaire@2x.png 2x" alt="Image d'un formulaire" loading="lazy" decoding="async">
             </figure>
             <p class="txt__content mgrid-start01 mgrid-end grid-start03 grid-end09">Le CREAVES de Namur est une ASBL qui prend en charge temporairement et gratuitement les animaux qui se retrouvent blessés ou malades. Le seul but étant de prodiguer les soins nécessaires avant la remise en liberté sur le lieu de la découverte lorsque c’est possible.</p>
 
@@ -135,14 +135,37 @@
 
             <p class="txt__content mgrid-start01 mgrid-end grid-start03 grid-end09">Dans le but de mener à bien mon projet, il y aura une fonctionnalité principale et plusieurs fonctionnalités secondaires. </p>
 
-            <figure class="mgrid-start01 mgrid-end gridstart01 grid-end07">
-                <img class="image__content" src="assets/images/maya.png" srcset="assets/images/image-intro@2x.png 2x" alt="Prototype app" loading="lazy" decoding="async">
-            </figure>
-
-            <figure class="mgrid-start01 mgrid-end gridstart01 grid-end07">
-                <img class="image__content" src="assets/images/maya.png" srcset="assets/images/image-intro@2x.png 2x" alt="Prototype app" loading="lazy" decoding="async">
-            </figure>
-            <h3 class="title title--small mgrid-start01 mgrid-end grid-start01 grid-end">Fonctionnalité apprentissage</h3>
+            <div class="slider-container">
+                <div class="slider">
+                  <div class="slide">
+                    <div class="slide-content">
+                      <i class="icon">Icon 1</i>
+                      <h3>Apprendre</h3>
+                      <figure class="mgrid-start01 mgrid-end gridstart01 grid-end07">
+                        <img class="image__content" src="assets/images/apprendre.png" srcset="assets/images/solution@2x.png 2x" alt="Illustration solution" loading="lazy" decoding="async">
+                    </figure>
+                    </div>
+                  </div>
+                  <div class="slide">
+                    <div class="slide-content">
+                        <i class="icon">Icon 1</i>
+                        <h3>Apprendre</h3>
+                        <figure class="mgrid-start01 mgrid-end gridstart01 grid-end07">
+                          <img class="image__content" src="assets/images/apprendre.png" srcset="assets/images/solution@2x.png 2x" alt="Illustration solution" loading="lazy" decoding="async">
+                      </figure>
+                    </div>
+                  </div>
+                  <div class="slide">
+                    <div class="slide-content">
+                        <i class="icon">Icon 1</i>
+                        <h3>Apprendre</h3>
+                        <figure class="mgrid-start01 mgrid-end gridstart01 grid-end07">
+                          <img class="image__content" src="assets/images/apprendre.png" srcset="assets/images/solution@2x.png 2x" alt="Illustration solution" loading="lazy" decoding="async">
+                      </figure>
+                    </div>
+                  </div>
+                </div>
+            </div>              
 
             <a class="section-link mgrid-start01 mgrid-end grid-start03 grid-end09" href="#">Lien vers reste d'infos</a>
             
