ajout page credits

--- a/credits.html
+++ b/credits.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>UI-Kit | TFA</title>
+    <title>Crédits | TFA</title>
     <link rel="stylesheet" href="assets/style/main.css">
     <link href="assets/style/aos.css" rel="stylesheet">
 
@@ -51,6 +51,7 @@
     <meta name="theme-color" content="#ffffff">
 
 </head>
+
 <body>
 
     <header class="header">
@@ -73,54 +74,15 @@
 
     <main class="main">
         <div class="content">
-            <h1 class="title title--big mgrid-start01 mgrid-end grid-start grid-end">UI-Kit</h1>
-            <h3 class="title title--small mgrid-start01 mgrid-end grid-start02 grid-end">Version Mobile</h3>
-            <h2 class="title title--big mgrid-start01 mgrid-end grid-start grid-end">H1 Cabin Bold 44pt</h2>
-            <h2 class="title title--medium mgrid-start01 mgrid-end grid-start grid-end">H2 Cabin SemiBold 36pt</h2>
-            <h3 class="title title--small mgrid-start01 mgrid-end grid-start02 grid-end">H3 Cabin Medium 21pt</h3>
-            <p class="txt__content mgrid-start01 mgrid-end grid-start05 grid-end12">Paragraphe Quicksand Regular 16pt</p>
-            <p class="txt__content mgrid-start01 mgrid-end grid-start03 grid-end09">Paragraphe Quicksand Regular 16pt</p>
-        </div>
-
-        <section class="content">
-            <h3 class="title title--small mgrid-start01 mgrid-end grid-start02 grid-end">Icônes</h3>
-            <ul class="content__list mgrid-start02 mgrid-end03">
-                <li><img class="icons--size" src="assets/images/menu-burger.svg" alt="Icône menu"></li>
-                <li><img class="icons--size" src="assets/images/apprendre.svg" alt="Icône apprendre"></li>
-            </ul>
-            <ul class="content__list mgrid-start04 mgrid-end05">
-                <li><img class="icons--size" src="assets/images/quiz.svg" alt="Icône Quiz"></li>
-                <li><img class="icons--size" src="assets/images/espace-perso.svg" alt="Icône espace perso"></li>
-            </ul>
-        </section>
-
-        <section class="content">
-            <h3 class="title title--small mgrid-start01 mgrid-end grid-start02 grid-end">Logo TFA</h3>
-            <figure class="mgrid-start01 mgrid-end grid-start02 grid-end09">
-                <img class="image__content" src="assets/images/Animergency-logo.svg" alt="Logo TFA">
-            </figure>
-        </section>
-
-
-        <section class="content">
-            <h3 class="title title--small mgrid-start01 mgrid-end grid-start03 grid-end">Boutons</h3>
-            <a class="bouton btn-experience mgrid-start02 mgrid-end04 grid-start06 grid-end10" href="experience.html">Expérience</a>
-            <a class="bouton btn-experience mgrid-start02 mgrid-end04 grid-start06 grid-end10" href="experience.html">Expérience</a>
-        </section>
-
-        <section class="content">
-            <h3 class="title title--small mgrid-start01 mgrid-end grid-start02 grid-end">Liste</h3> 
+            <h1 class="title title--big mgrid-start01 mgrid-end grid-start grid-end">Crédits</h1>
             <ul class="mgrid-start02 mgrid-end grid-start02 grid-end09">
-                <li class="content__list list__details--el">Elément liste 1</li>
-                <li class="content__list list__details--el">Elément liste 2</li>
-                <li class="content__list list__details--el">Elément liste 3</li>
+                <li class="content__list list__details--el"><a class="header__link--content" href="https://www.creaves-namur.be/">CREAVES de Namur</a></li>
+                <li class="content__list list__details--el"><a class="header__link--content" href="https://fonts.google.com/specimen/Quicksand?query=quicksand">Google Fonts - Quicksand</a></li>
+                <li class="content__list list__details--el"><a class="header__link--content" href="https://fonts.google.com/specimen/Cabin?query=cabin">Google Fonts - Cabin</a></li>
+                <li class="content__list list__details--el"><a class="header__link--content" href="https://www.vtnamur.com/">Cebinet vétérinaire Ruyssen Sophie</a></li>
+                <li class="content__list list__details--el"><a class="header__link--content" href="https://www.veterinairecornellenamur.be/">Cebinet vétérinaire Cornelle / Jean-Pierre</a></li>
             </ul>
-        </section>
-        
-        <section class="content">
-            <h3 class="title title--small mgrid-start01 mgrid-end grid-start02 grid-end">Footer</h3> 
-        </section>
-
+        </div>
     </main>
 
     <footer class="footer">
